Implementado um ForegroundService para monitorar a aproximação de um compromisso do dia e disparar um alarme na hora exata. Aprimorado as notificações(tipos e composições) Adicionado uma activity notificação de tela cheia

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,6 +66,8 @@
     <string name="txt_btnDialogsSelecionar">SELECIONAR</string>
     <string name="txt_btnDialogsExcluir">EXCLUIR</string>
     <string name="txt_btnDialogsEditar">EDITAR</string>
+    <string name="txt_AproxCompromisso1">Faltam</string>
+    <string name="txt_AproxCompromisso2">Minutos</string>
     <string name="aviso_ProxCompromissoNotification">Próximo Compromisso</string>
     <string name="aviso_SemDescricaoDialogs">Sem Descrição</string>
     <string name="aviso_SemEventosHoje">Nenhum Evento\nRegistrado para Hoje</string>
